--- a/main.html
+++ b/main.html
@@ -1,21 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Video Speed Scrubber</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Video Speed Controller</title>
+  <style>
+    .player {
+      max-width: 750px;
+      margin: 30px auto;
+      border: 5px solid #ccc;
+      position: relative;
+      overflow: hidden;
+      font-family: sans-serif;
+      background: #000;
+    }
+
+    .viewer {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .player__controls {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 10px;
+    }
+
+    .progress {
+      flex: 1;
+      height: 8px;
+      background: #555;
+      cursor: pointer;
+      border-radius: 4px;
+      overflow: hidden;
+    }
+
+    .progress__filled {
+      width: 0%;
+      height: 100%;
+      background: #ffc600;
+      transition: width 0.1s;
+    }
+
+    .player__button,
+    button {
+      background: none;
+      border: 0;
+      color: white;
+      font-size: 20px;
+      cursor: pointer;
+    }
+
+    input[type="range"] {
+      width: 100px;
+    }
+  </style>
 </head>
 <body>
 
-  <div class="wrapper">
-    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" controls></video>
-    <div class="speed">
-      <div class="speed-bar">1×</div>
+  <div class="player">
+    <video class="viewer" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+
+    <div class="player__controls">
+      <button class="player__button toggle" title="Toggle Play">►</button>
+      <button data-skip="-10">« 10s</button>
+      <button data-skip="25">25s »</button>
+
+      <input type="range" name="volume" class="volume" min="0" max="1" step="0.05" value="1">
+      <input type="range" name="playbackSpeed" class="playbackSpeed" min="0.5" max="2" step="0.1" value="1">
+
+      <div class="progress">
+        <div class="progress__filled"></div>
+      </div>
     </div>
   </div>
 
-<script  src="./script.js">
-  //Your code goes here
-</script>
+  <script src="scripts.js"></script>
 </body>
 </html>
+
