--- a/main.html
+++ b/main.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Video Speed Controller</title>
   <style>
     .player {
@@ -15,7 +14,7 @@
       background: #000;
     }
 
-    .viewer {
+    .player__video {
       width: 100%;
       height: auto;
       display: block;
@@ -63,12 +62,12 @@
 <body>
 
   <div class="player">
-    <video class="viewer" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+    <video class="player__video" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
 
     <div class="player__controls">
       <button class="player__button toggle" title="Toggle Play">►</button>
-      <button data-skip="-10">« 10s</button>
-      <button data-skip="25">25s »</button>
+      <button class="rewind" data-skip="-10">« 10s</button>
+      <button class="forward" data-skip="25">25s »</button>
 
       <input type="range" name="volume" class="volume" min="0" max="1" step="0.05" value="1">
       <input type="range" name="playbackSpeed" class="playbackSpeed" min="0.5" max="2" step="0.1" value="1">
@@ -82,4 +81,6 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
+ 
 
